# ledger

./: .env  .env.example  .gitignore  Cargo.toml  README.md
.ledger/: config.json
docs/: API.md
scripts/: setup-windows-env.ps1
src/: app.rs  env.rs  main.rs
src/api/: context.rs  error.rs  middleware.rs  mod.rs  registry.rs  response.rs
src/api/routes/: auth.rs  blobs.rs  commits.rs  diff.rs  guards.rs  health.rs  index.rs  mod.rs  refs.rs  repos.rs  trees.rs
src/auth/: config.rs  extractor.rs  jwt.rs  mod.rs  password.rs  service.rs
src/cli/: client.rs  config.rs  mod.rs  workdir.rs
src/cli/commands/: add.rs  branch.rs  cat.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  login.rs  logout.rs  mod.rs  register.rs  repos.rs  reset.rs  start.rs  status.rs  test.rs  whoami.rs
src/core/: errors.rs  mod.rs
src/core/blob/: mod.rs
src/core/commit/: mod.rs
src/core/diff/: mod.rs
src/core/index/: mod.rs
src/core/repo/: mod.rs  refs.rs
src/core/tree/: mod.rs
src/db/: mod.rs  model.rs  registry.rs
src/db/models/: blob.rs  commit.rs  index.rs  mod.rs  path_index.rs  ref.rs  refresh_token.rs  repo.rs  repo_access.rs  tree.rs  user.rs
