[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
clap-action-command = "0.1.0"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
inventory = "0.3"
paste = "1.0"

[dependencies.mongodb]
version = "3.5.2"